wrap the file checkbox into a frame, to avoid messing up with its padding show/hide the tracker buttons when pressing on a tracker 2 of the buttons are functional reset the tracker objects' indices when removing a tracker from the adapter

--- a/res/layout/torrent_detail_files.xml
+++ b/res/layout/torrent_detail_files.xml
@@ -20,6 +20,9 @@
     <LinearLayout
         android:id="@+id/torrent_detail_files_content"
         android:orientation="vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         style="@style/CardContentCollapsed" >
     </LinearLayout>
+
 </LinearLayout>
