--- a/res/layout/torrent_detail_files_row.xml
+++ b/res/layout/torrent_detail_files_row.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/torrent_detail_files_row"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/list_activated_holo_light"
-    android:fontFamily="sans-serif-light"
-    android:paddingLeft="@dimen/checkbox_padding_left"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp" >
-</CheckBox>
+
+    <CheckBox
+        android:id="@+id/torrent_detail_files_row"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"/>
+
+</FrameLayout>
