--- a/res/xml/sort_preferences.xml
+++ b/res/xml/sort_preferences.xml
@@ -53,10 +53,18 @@
     <PreferenceCategory android:title="@string/base_sort_method" >
         <ListPreference
 	        android:key="base_sort"
-	        android:title="Secondary sorting"
+	        android:title="@string/base_sort"
 	        android:dialogTitle="@string/sorting_option"
 	        android:entries="@array/pref_base_sort_method_entries"
 	        android:entryValues="@array/pref_base_sort_method_values"
 	        android:defaultValue="AGE" />
+
+        <ListPreference
+            android:key="base_sort_order"
+            android:title="@string/base_sort_order"
+            android:dialogTitle="@string/base_sort_order"
+            android:entries="@array/pref_base_sort_order_entries"
+            android:entryValues="@array/pref_base_sort_order_values"
+            android:defaultValue="PRIMARY"/>
 	</PreferenceCategory>
 </PreferenceScreen>
