--- a/res/layout/add_torrent_dialog.xml
+++ b/res/layout/add_torrent_dialog.xml
@@ -18,4 +18,13 @@
         android:fontFamily="sans-serif-condensed"
         android:text="@string/start_paused_checkbox" />
 
+    <CheckBox
+        android:id="@+id/delete_local"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:text="@string/delete_local_checkbox" />
+
 </LinearLayout>
