--- a/res/drawable/list_item_color.xml
+++ b/res/drawable/list_item_color.xml
@@ -1,7 +1,31 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:state_enabled="false" android:color="@android:color/darker_gray" />
-    <item android:state_checked="true" android:state_enabled="false" android:color="#575757" />
-    <item android:state_selected="false" android:state_enabled="false" android:color="@android:color/darker_gray" />
-    <item android:state_selected="true" android:state_enabled="false" android:color="#575757" />
-    <item android:color="@android:color/primary_text_light" />
+    <item
+        android:state_enabled="false"
+        android:state_activated="true"
+        android:color="#919191" />
+    <item
+        android:state_enabled="false"
+        android:state_pressed="true"
+        android:color="#808080" />
+
+    <item
+        android:state_enabled="false"
+        android:state_pressed="false"
+        android:color="@android:color/darker_gray" />
+    <item
+        android:state_enabled="false"
+        android:state_activated="false"
+        android:color="@android:color/darker_gray" />
+
+
+
+    <item
+        android:state_activated="true"
+        android:color="#3c3c3c" />
+    <item
+        android:state_pressed="true"
+        android:color="#484848" />
+
+    <item
+        android:color="@android:color/primary_text_light" />
 </selector>
