--- a/res/layout/torrent_detail_files_row.xml
+++ b/res/layout/torrent_detail_files_row.xml
@@ -2,16 +2,26 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_activated_holo_light"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp" >
+    android:addStatesFromChildren="true"
+    android:background="?android:attr/selectableItemBackground">
 
-    <CheckBox
-        android:id="@+id/torrent_detail_files_row"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"/>
+        android:layout_height="match_parent"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:addStatesFromChildren="true"
+        android:background="@drawable/list_activated_holo_light">
+
+        <CheckBox
+            android:id="@+id/torrent_detail_files_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"/>
+
+    </FrameLayout>
+
 
 </FrameLayout>
