--- a/res/layout/torrent_detail_trackers_row.xml
+++ b/res/layout/torrent_detail_trackers_row.xml
@@ -3,6 +3,8 @@
     android:id="@+id/torrent_detail_trackers_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:addStatesFromChildren="true"
     android:orientation="vertical">
 
     <TableLayout
@@ -15,9 +17,7 @@
         android:paddingRight="8dp"
         android:shrinkColumns="0">
 
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+        <TableRow style="@style/TrackerInfoRow">
 
             <TextView
                 android:id="@+id/tracker_url"
@@ -34,9 +34,7 @@
 
         </TableRow>
 
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+        <TableRow style="@style/TrackerInfoRow">
 
             <TextView
                 android:id="@+id/tracker_announce"
@@ -49,9 +47,7 @@
 
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+        <TableRow style="@style/TrackerInfoRow">
 
             <TextView
                 android:id="@+id/tracker_scrape"
