add a shape to the status bar

--- a/res/layout/fragment_torrent_list.xml
+++ b/res/layout/fragment_torrent_list.xml
@@ -23,9 +23,9 @@
             android:layout_height="wrap_content"
             android:paddingLeft="4dp"
             android:paddingRight="8dp"
-            android:paddingTop="2dp"
+            android:paddingTop="3dp"
             android:paddingBottom="2dp"
-            android:background="@android:color/black"
+            android:background="@drawable/status_bar"
             android:fontFamily="sans-serif-condensed"
             android:textSize="12sp"
             android:textColor="?android:attr/colorForegroundInverse"
