revert the android design icons to their original names
add the xxhdpi icons

--- a/res/layout/torrent_profile_settings_action_bar.xml
+++ b/res/layout/torrent_profile_settings_action_bar.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="8dip"
-                android:src="@drawable/ic_menu_done"
+                android:src="@drawable/ic_action_accept"
                 android:description="@string/done" />
 
             <TextView
