--- a/res/menu/torrent_detail_fragment.xml
+++ b/res/menu/torrent_detail_fragment.xml
@@ -2,35 +2,35 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/resume"
 	    android:title="@string/resume"
-	    android:icon="@drawable/ic_menu_resume"
+	    android:icon="@drawable/ic_action_play"
 	    android:menuCategory="system"
 	    android:orderInCategory="10"
 	    android:showAsAction="ifRoom" />
     
     <item android:id="@+id/pause"
 	    android:title="@string/pause"
-	    android:icon="@drawable/ic_menu_pause"
+	    android:icon="@drawable/ic_action_pause"
 	    android:menuCategory="system"
 	    android:orderInCategory="10"
 	    android:showAsAction="ifRoom" />
     
     <item android:id="@+id/remove"
 	    android:title="@string/remove"
-	    android:icon="@drawable/ic_menu_cancel"
+	    android:icon="@drawable/ic_action_cancel"
 	    android:menuCategory="system"
 	    android:orderInCategory="10"
 	    android:showAsAction="ifRoom" />
     
 	<item android:id="@+id/delete"
 	    android:title="@string/remove_data"
-	    android:icon="@drawable/ic_menu_trash_holo_dark"
+	    android:icon="@drawable/ic_action_discard"
 	    android:menuCategory="system"
 	    android:orderInCategory="10"
 	    android:showAsAction="ifRoom" />
 	
 	<item android:id="@+id/move"
 	    android:title="@string/move"
-	    android:icon="@drawable/ic_menu_move"
+	    android:icon="@drawable/ic_action_forward"
 	    android:menuCategory="system"
 	    android:orderInCategory="10"
 	    android:showAsAction="ifRoom" />
