--- a/res/menu/torrent_profile_settings_fragment.xml
+++ b/res/menu/torrent_profile_settings_fragment.xml
@@ -3,7 +3,7 @@
     <item android:id="@+id/delete"
         android:visible="true"
         android:showAsAction="always|withText"
-        android:icon="@drawable/ic_menu_cancel"
+        android:icon="@drawable/ic_action_cancel"
         android:title="@string/delete" />
 
 </menu>
