tweak the status bar padding

--- a/res/layout/fragment_torrent_list.xml
+++ b/res/layout/fragment_torrent_list.xml
@@ -23,13 +23,13 @@
             android:layout_height="wrap_content"
             android:paddingLeft="4dp"
             android:paddingRight="8dp"
-            android:paddingTop="3dp"
-            android:paddingBottom="2dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="4dp"
             android:background="@drawable/status_bar"
             android:fontFamily="sans-serif-condensed"
             android:textSize="12sp"
             android:textColor="?android:attr/colorForegroundInverse"
-            android:gravity="right"
+            android:gravity="center_vertical|right"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true" />
