--- a/res/menu/torrent_list_activity.xml
+++ b/res/menu/torrent_list_activity.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item android:id="@+id/menu_refresh"
+          android:icon="@drawable/ic_action_refresh"
+          android:visible="true"
+          android:showAsAction="ifRoom"
+          android:menuCategory="system"
+          android:orderInCategory="1"
+          android:title="@string/refresh"
+          android:titleCondensed="@string/refresh"/>
+
+    <item android:id="@+id/menu_alt_speed"
+          android:icon="@drawable/ic_action_data_usage"
+          android:visible="false"
+          android:showAsAction="ifRoom"
+          android:menuCategory="system"
+          android:orderInCategory="25"
+          android:title="@string/alt_speed_label_on"
+          android:titleCondensed="@string/alt_speed"/>
+
     <item android:id="@+id/menu_session_settings"
         android:visible="false"
         android:showAsAction="never"
