--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,38 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-    <string-array name="torrent_priority">
-        <item>Low</item>
-        <item>Normal</item>
-        <item>High</item>
-    </string-array>
     <string-array name="torrent_priority_values" translatable="false">
         <item>low</item>
         <item>normal</item>
         <item>high</item>
     </string-array>
-    
-    <string-array name="torrent_seed_ratio_mode">
-        <item>Use global settings</item>
-        <item>Stop seeding at ratio</item>
-        <item>Seed regardless of ratio</item>
-    </string-array>
-    <string-array name="torrent_seed_ratio_mode_values">
+
+    <string-array name="torrent_seed_ratio_mode_values" translatable="false">
         <item>global</item>
         <item>user</item>
         <item>infinite</item>
     </string-array>
-    
-    <string-array name="pref_full_update_entries">
-        <item>2 updates</item>
-        <item>3 updates</item>
-        <item>5 updates</item>
-        <item>10 updates</item>
-        <item>30 updates</item>
-        <item>60 updates</item>
-        <item>100 updates</item>
-    </string-array>
-    
+
     <string-array name="pref_full_update_values" translatable="false">
         <item>2</item>
         <item>3</item>
@@ -42,18 +21,7 @@
         <item>60</item>
         <item>100</item>
     </string-array>
-    
-    <string-array name="pref_update_interval_entries">
-        <item>Every second</item>
-        <item>2 seconds</item>
-        <item>5 seconds</item>
-        <item>10 seconds</item>
-        <item>30 seconds</item>
-        <item>Every minute</item>
-        <item>2 minutes</item>
-        <item>Never</item>
-    </string-array>
-    
+
     <string-array name="pref_update_interval_values" translatable="false">
         <item>1</item>
         <item>2</item>
@@ -64,15 +32,7 @@
         <item>120</item>
         <item>-1</item>
     </string-array>
-    
-    <string-array name="pref_con_retries_entries">
-        <item>Once</item>
-        <item>Twice</item>
-        <item>3 times</item>
-        <item>5 times</item>
-        <item>10 times</item>
-        <item>15 times</item>
-    </string-array>
+
     <string-array name="pref_con_retries_values" translatable="false">
         <item>1</item>
         <item>2</item>
@@ -81,21 +41,7 @@
         <item>10</item>
         <item>15</item>
     </string-array>
-    
-    <string-array name="pref_base_sort_method_entries">
-        <item>Name</item>
-        <item>Size</item>
-        <item>Status</item>
-        <item>Download speed</item>
-		<item>Upload speed</item>
-		<item>Age</item>
-		<item>Progress</item>
-		<item>Ratio</item>
-		<item>Activity</item>
-		<item>Location</item>
-		<item>Peers</item>
-		<item>Queue position</item>
-    </string-array>
+
     <string-array name="pref_base_sort_method_values" translatable="false">
         <item>NAME</item>
         <item>SIZE</item>
@@ -111,12 +57,6 @@
 		<item>QUEUE</item>
     </string-array>
 
-    <string-array name="pref_base_sort_order_entries">
-        <item>Ascending</item>
-        <item>Descending</item>
-        <item>Primary order</item>
-        <item>Reverse primary order</item>
-    </string-array>
     <string-array name="pref_base_sort_order_values" translatable="false">
         <item>ASCENDING</item>
         <item>DESCENDING</item>
@@ -124,11 +64,6 @@
         <item>REVERSE</item>
     </string-array>
 
-    <string-array name="session_settings_encryption">
-        <item>Required</item>
-        <item>Preferred</item>
-        <item>Tolerated</item>
-    </string-array>
     <string-array name="session_settings_encryption_values" translatable="false">
         <item>required</item>
         <item>preferred</item>
