--- a/gearshift/src/main/res/layout/add_torrent_dialog.xml
+++ b/gearshift/src/main/res/layout/add_torrent_dialog.xml
@@ -5,26 +5,10 @@
     android:padding="8dp"
     android:orientation="vertical" >
 
-    <Spinner
-        android:id="@+id/location_choice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <CheckBox
-        android:id="@+id/start_paused"
-        android:layout_marginTop="8dp"
+    <EditText
+        android:id="@+id/magnet_link"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:text="@string/start_paused_checkbox" />
-
-    <CheckBox
-        android:id="@+id/delete_local"
-        android:visibility="gone"
-        android:layout_marginTop="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:text="@string/delete_local_checkbox" />
+        android:hint="@string/add_new_magnet" />
 
 </LinearLayout>
