--- a/gearshift/src/main/res/layout/torrent_location_dialog.xml
+++ b/gearshift/src/main/res/layout/torrent_location_dialog.xml
@@ -16,15 +16,33 @@
             android:fontFamily="sans-serif"
             android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/location_entry"
+        <LinearLayout
+            android:id="@+id/location_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_download_directory"
-            android:inputType="textNoSuggestions"
-            android:fontFamily="sans-serif"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:orientation="horizontal"
+            android:visibility="gone" >
+
+            <EditText
+                android:id="@+id/location_entry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/hint_download_directory"
+                android:inputType="textNoSuggestions"
+                android:fontFamily="sans-serif"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/location_collapse"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:layout_weight="1"
+                android:src="@drawable/ic_action_collapse"
+                android:background="?android:attr/selectableItemBackground"/>
+        </LinearLayout>
 
     </FrameLayout>
 
