--- a/gearshift/src/main/res/xml/torrent_profile_preferences.xml
+++ b/gearshift/src/main/res/xml/torrent_profile_preferences.xml
@@ -10,7 +10,7 @@
 	<PreferenceCategory android:title="@string/connection">
 	    <EditTextPreference
 	        android:key="profile_host"
-	        android:defaultValue="@string/empty_string"
+	        android:defaultValue=""
 	        android:inputType="textNoSuggestions|textVisiblePassword"
 	        android:title="@string/con_host"
 	        android:dialogTitle="@string/con_host" />
@@ -28,13 +28,13 @@
 	        android:dialogTitle="@string/con_path" />
 	    <EditTextPreference
 	        android:key="profile_username"
-	        android:defaultValue="@string/empty_string"
+	        android:defaultValue=""
 	        android:inputType="textNoSuggestions|textVisiblePassword"
 	        android:title="@string/con_username"
 	        android:dialogTitle="@string/con_username" />
 	    <EditTextPreference
 	        android:key="profile_password"
-	        android:defaultValue="@string/empty_string"
+	        android:defaultValue=""
 	        android:inputType="textPassword"
 	        android:title="@string/con_password"
 	        android:dialogTitle="@string/con_password" />
