--- a/gearshift/src/main/res/menu/torrent_list_activity.xml
+++ b/gearshift/src/main/res/menu/torrent_list_activity.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/menu_refresh"
           android:icon="@drawable/ic_action_refresh"
           android:visible="true"
-          android:showAsAction="ifRoom"
+          android:showAsAction="always"
           android:menuCategory="system"
           android:orderInCategory="1"
           android:title="@string/refresh"
