--- a/gearshift/src/main/res/layout/torrent_detail_files_directory_row.xml
+++ b/gearshift/src/main/res/layout/torrent_detail_files_directory_row.xml
@@ -5,5 +5,6 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground">
 </TextView>
