move the various classes into subpackages

--- a/gearshift/src/main/res/layout/activity_torrent_list.xml
+++ b/gearshift/src/main/res/layout/activity_torrent_list.xml
@@ -17,7 +17,7 @@
 	
 	    <fragment
 	        android:id="@+id/torrent_list_menu"
-	        android:name="org.sugr.gearshift.TorrentListMenuFragment"
+	        android:name="org.sugr.gearshift.ui.TorrentListMenuFragment"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
 	        tools:layout="@layout/fragment_torrent_list_menu" />
