--- a/gearshift/src/main/res/layout/torrent_list_twopane.xml
+++ b/gearshift/src/main/res/layout/torrent_list_twopane.xml
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/torrent_list"
-        android:name="org.sugr.gearshift.TorrentListFragment"
+        android:name="org.sugr.gearshift.ui.TorrentListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
