--- a/gearshift/src/main/res/layout/torrent_list.xml
+++ b/gearshift/src/main/res/layout/torrent_list.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/torrent_list"
-    android:name="org.sugr.gearshift.TorrentListFragment"
+    android:name="org.sugr.gearshift.ui.TorrentListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TorrentListActivity"
