--- a/gearshift/src/main/res/layout/torrents_listview.xml
+++ b/gearshift/src/main/res/layout/torrents_listview.xml
@@ -2,11 +2,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-            
-    <ListView android:id="@android:id/list"
-            android:layout_width="match_parent" 
-            android:layout_height="match_parent"
-            android:drawSelectorOnTop="false" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView android:id="@android:id/list"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:drawSelectorOnTop="false" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
     <TextView android:id="@+android:id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
