add filter by errors

--- a/gearshift/src/main/res/xml/filters_preferences.xml
+++ b/gearshift/src/main/res/xml/filters_preferences.xml
@@ -34,6 +34,10 @@
             android:key="filter_checking"
             android:title="@string/menu_filters_checking"
             android:defaultValue="true" />
+        <CheckBoxPreference
+            android:key="filter_errors"
+            android:title="@string/menu_filters_errors"
+            android:defaultValue="true" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/directory_filters" >
         <CheckBoxPreference
