treat the untracked filter as a special tracker
only use the tracker/directory as a filter in the data source if
filtering by those is enabled

--- a/gearshift/src/main/res/xml/filters_preferences.xml
+++ b/gearshift/src/main/res/xml/filters_preferences.xml
@@ -53,6 +53,7 @@
         <CheckBoxPreference
             android:key="filter_untracked"
             android:title="@string/show_untracked_filter"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:dependency="filter_trackers"/>
     </PreferenceCategory>
 </PreferenceScreen>
