--- a/gearshift/src/main/res/layout/activity_torrent_list.xml
+++ b/gearshift/src/main/res/layout/activity_torrent_list.xml
@@ -1,28 +1,37 @@
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <include layout="@layout/torrent_list" />
+    <include layout="@layout/toolbar"/>
 
-	<LinearLayout
-	    android:id="@+id/sliding_menu_frame"
-	    android:layout_width="@dimen/sliding_menu_offset"
-	    android:layout_height="match_parent"
-	    android:layout_gravity="start"
-	    android:background="#333333"
-	    android:orientation="horizontal" >
-	
-	    <fragment
-	        android:id="@+id/torrent_list_menu"
-	        android:name="org.sugr.gearshift.ui.TorrentListMenuFragment"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        tools:layout="@layout/fragment_torrent_list_menu" />
-	
-	</LinearLayout>
-	
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</android.support.v4.widget.DrawerLayout>
+        <include layout="@layout/torrent_list" />
+
+        <LinearLayout
+            android:id="@+id/sliding_menu_frame"
+            android:layout_width="@dimen/sliding_menu_offset"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#333333"
+            android:orientation="horizontal" >
+
+            <fragment
+                android:id="@+id/torrent_list_menu"
+                android:name="org.sugr.gearshift.ui.TorrentListMenuFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:layout="@layout/fragment_torrent_list_menu" />
+
+        </LinearLayout>
+
+
+
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
