--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="color_primary">#212121</color>
+    <color name="color_primary_dark">#131313</color>
+    <color name="text_color_primary">#cacaca</color>
+    <color name="accent">#b50000</color>
+
+    <color name="color_secondary">@color/material_deep_teal_200</color>
+    <color name="color_secondary_dark">@color/material_deep_teal_500</color>
+
     <color name="main_red">#b60000</color>
     <color name="main_gray">#cacaca</color>
     <color name="main_black">#1a1a1a</color>
