--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -4,12 +4,11 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="windowActionBar">false</item>
     </style>
 
     <!-- Application theme. -->
@@ -29,7 +28,13 @@
     <style name="AppTheme.CardsActivity" parent="AppTheme">
         <item name="android:windowBackground">@color/detail_background</item>
     </style>
-    
+
+    <style name="DefaultToolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    </style>
+
     <style name="TorrentTitle">
 	   	<item name="android:paddingLeft">16dp</item>
 	   	<item name="android:paddingRight">16dp</item>
