--- a/gearshift/src/main/res/menu/torrent_list_fragment.xml
+++ b/gearshift/src/main/res/menu/torrent_list_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/find"
           android:title="@string/find"
-          android:showAsAction="collapseActionView"
+          app:showAsAction="collapseActionView"
           android:visible="false"/>
 </menu>
