--- a/gearshift/src/main/res/layout/activity_torrent_detail.xml
+++ b/gearshift/src/main/res/layout/activity_torrent_detail.xml
@@ -1,13 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/toolbar"/>
 
     <FrameLayout
-        android:id="@+id/torrent_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" >
 
-    <include layout="@layout/error_layer" />
+        <FrameLayout
+            android:id="@+id/torrent_detail_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-</FrameLayout>
+        <include layout="@layout/error_layer" />
 
+    </FrameLayout>
+
+</LinearLayout>
