--- a/gearshift/src/main/res/menu/add_directory_option.xml
+++ b/gearshift/src/main/res/menu/add_directory_option.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_add_directory"
         android:visible="true"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/add_directory_option" />
 
 
     <item android:id="@+id/import_directories"
           android:visible="false"
-          android:showAsAction="never"
+          app:showAsAction="never"
           android:title="@string/import_session_directories" />
 </menu>
