--- a/gearshift/src/main/res/menu/add_profile_option.xml
+++ b/gearshift/src/main/res/menu/add_profile_option.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_add_profile"
         android:visible="true"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/add_profile_option" />
 
 </menu>
