--- a/gearshift/src/main/res/menu/download_directories_multiselect.xml
+++ b/gearshift/src/main/res/menu/download_directories_multiselect.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
      <item android:id="@+id/select_all"
 	    android:title="@string/ic_menu_select_all"
 	    android:icon="@drawable/ic_action_select_all"
-	    android:showAsAction="always" />
+	    app:showAsAction="always" />
     <item android:id="@+id/remove"
 	    android:title="@string/remove"
 	    android:icon="@drawable/ic_action_cancel"
-	    android:showAsAction="always" />
+	    app:showAsAction="always" />
 </menu>
