--- a/gearshift/src/main/res/menu/torrent_detail_activity.xml
+++ b/gearshift/src/main/res/menu/torrent_detail_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
      <item android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:visible="true"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:menuCategory="system"
         android:orderInCategory="1"
         android:title="@string/refresh"
