--- a/gearshift/src/main/res/menu/torrent_detail_tracker_multiselect.xml
+++ b/gearshift/src/main/res/menu/torrent_detail_tracker_multiselect.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/select_all"
 	    android:title="@string/ic_menu_select_all"
 	    android:icon="@drawable/ic_action_select_all"
-	    android:showAsAction="ifRoom" />
+	    app:showAsAction="ifRoom" />
     
     <item android:id="@+id/remove"
 	    android:title="@string/remove"
 	    android:icon="@drawable/ic_action_cancel"
-	    android:showAsAction="always" />
+	    app:showAsAction="always" />
 
 </menu>
