--- a/gearshift/src/main/res/layout/fragment_torrent_list_menu.xml
+++ b/gearshift/src/main/res/layout/fragment_torrent_list_menu.xml
@@ -4,11 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/filter_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
-    </ListView>
+        android:layout_weight="1"/>
 
 </LinearLayout>
