--- a/gearshift/src/main/res/layout/activity_torrent_list.xml
+++ b/gearshift/src/main/res/layout/activity_torrent_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:elevation="2dp"
         style="@style/DefaultToolbar">
 
         <android.support.v7.widget.SwitchCompat
